Be smarter in how we install mill

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,8 +9,16 @@ jdk:
   - oraclejdk8
 
 before_install:
-  - curl -L -o /usr/local/bin/mill https://github.com/lihaoyi/mill/releases/download/0.1.1/0.1.1
-  - chmod +x /usr/local/bin/mill
+  - export MILL_VERSION=0.1.1
+  - if [ ! -d $HOME/.bin ]; then mkdir $HOME/.bin; fi
+  # Update mill only if the desired version isn't cached
+  - if [ ! -f $HOME/.bin/mill-$MILL_VERSION ]; then
+        curl -L -o $HOME/.bin/mill-$MILL_VERSION https://github.com/lihaoyi/mill/releases/download/$MILL_VERSION/$MILL_VERSION
+        chmod +x $HOME/.bin/mill-$MILL_VERSION
+        if [ -L $HOME/.bin/mill ]; then unlink $HOME/.bin/mill; fi
+        ln -s $HOME/.bin/mill-$MILL_VERSION $HOME/.bin/mill
+    fi
+  - export PATH=$HOME/.bin:$PATH
 
 cache:
   directories:
@@ -19,6 +27,7 @@ cache:
   - $HOME/.sbt/launchers
   - $HOME/.ivy2/cache
   - $HOME/.coursier
+  - $HOME/.bin
 
 matrix:
   include:
