--- a/.travis.yml
+++ b/.travis.yml
@@ -10,14 +10,7 @@ jdk:
 
 before_install:
   - export MILL_VERSION=0.1.1
-  - if [ ! -d $HOME/.bin ]; then mkdir $HOME/.bin; fi
-  # Update mill only if the desired version isn't cached
-  - if [ ! -f $HOME/.bin/mill-$MILL_VERSION ]; then
-        curl -L -o $HOME/.bin/mill-$MILL_VERSION https://github.com/lihaoyi/mill/releases/download/$MILL_VERSION/$MILL_VERSION
-        chmod +x $HOME/.bin/mill-$MILL_VERSION
-        if [ -L $HOME/.bin/mill ]; then unlink $HOME/.bin/mill; fi
-        ln -s $HOME/.bin/mill-$MILL_VERSION $HOME/.bin/mill
-    fi
+  - bash install_mill.sh
   - export PATH=$HOME/.bin:$PATH
 
 cache:
